syntax = "proto3";// 指定protobuf版本
option java_package = "com.freddy.kulaims.protobuf";// 指定包名
option java_outer_classname = "MessgeProtobuf";// 指定类名

message Msg {
    Head head = 1;// 消息头
    Body body = 2;// 消息体
}

message Head {
    string msgId = 1;// 消息id
    string msgType = 2;// 消息类型
    string sender = 3;// 发送者
    string receiver = 4;// 接收者
    int64 timestamp = 5;// 发送时间戳，单位：毫秒
    int32 state = 6;// 发送状态，-1:发送失败 0:发送中 1:发送成功
}

message Body {
    string content = 1;// 消息内容
    string contentType = 2;// 消息内容类型，text:文本 image:图片 voice:语音 expression:表情
    string extend = 3;// 扩展字段，以key/value形式存储的json字符串
}

